# spiritwood

./: .dockerignore  .gitignore  Cargo.toml  Dockerfile  Makefile  Rocket.toml  board.js  card.js  cookie.js  credits.html  dice.js  game.html  game.js  index.html  smoke-test.sh  styles.css
db/: assets_2020-04-05.sql
images/: spiritwood.xcf
src/: api.rs  cards.rs  dice.rs  fail.rs  game.rs  main.rs  state.rs
ui/: card.js  cookie.js  decks.js  dice.js  game.js  init.js  menu.js  player.js  tiles.js
