[package]
name = "spiritwood-server"
version = "0.1.0"
authors = ["Edd Steel <edd@eddsteel.com>", "Shane Gearon", "James Hunter"]
edition = "2018"

[dependencies]
rocket = "0.4.4"
rocket_contrib = "0.4.4"
rocket_cors = "0.5.1"
serde = "1.0"
serde_json = "1.0"
serde_derive = "1.0"
im = "14.3.0"
rand = "0.7.3"
uuid = { version = "0.8.1", features = ["serde", "v4"] }